-Added ZX Spectrum +2a driver
-Added ZX Spectrum +3 driver
-Added ZX Spectrum +2 (France) driver
-Added ZX Spectrum +2 (Spain) driver
-Added ZX Spectrum +3 (Spain) driver
-Added ZX Spectrum +3e driver
-Added ZX Spectrum +4 driver
-Sound, tape and disk emulation for all ZX Spectrum models not implemented
-Added speaker sound emulation (not tested)
-Moved eventlst and border to mess package

22/07/2018
==========
-First preliminary version of the 128k model. WIP, doesn't works (several memory banks issues)

20/07/2018
==========
-Full SNA and Z80 file formats support

19/07/2018
==========
-Initial zx spectrum 48k driver but doesn't seem to work properly
-Added border class and preliminary border emulation
-Added first version of eventlst

20/03/2018
==========
-More nes driver progress but doesn't seem to work properly

19/03/2018
==========
-Some intial work on nes driver
-More progress to nes driver (still very intial)

17/03/2018
==========
-Used z80 from arcadeflex_037b7 accurate project
-Some fixes to sms vdp (increased vdp mem) . Now sonic appears to work ok. Some more sms games appears to work as well

04/03/2018
==========
-Added ym2413 sound chip needed for sms emulation
-Added sms driver (WIP)

01/03/2018
==========
-Started rewritting fileio for mess . Roms are now loaded from bios folder
-fileio works for "software" folder now
-Some fixes to mess.java . now rom detection is better

28/2/2018
=========
-Added init_devices in mess.java
-Fixed to mess.java and finished function in machine/coleco.java . First colecovision game is playable (dkong)

27/2/2018
=========
-Ported mameH to 0.37b7 adding mess stuff
-Added load_image for mess
-Implemented get_filenames in mess.java enough for coleco system at least

26/2/2018
=========
-IODevice structure added in mess.h
-Added CONS (gamedriver macro) . Project is now compileable (with a few todos in coleco machine according loading)
-Some work on mess/msdos.java for detecting system

25/2/2018
=========