@@ -7,8 +7,8 @@ package mame;
 import static arcadeflex.libc.cstring.strlen;
 import static WIP.mame.mame.Machine;
 import static WIP.mame.osdependH.*;
-import static WIP.mame.ui_text.*;
-import static WIP.mame.ui_textH.*;
+import static mame.ui_text.*;
+import static mame.ui_textH.*;
 import static mame.datafile.load_driver_history;
 import static old.mame.inptportH.IPT_UI_CANCEL;
 import static old.mame.inptportH.IPT_UI_CONFIGURE;
