@@ -30,8 +30,8 @@ import static WIP.mame.mame.*;
 import static mame.mameH.MAX_GFX_ELEMENTS;
 import static WIP.mame.osdependH.osd_bitmap;
 import static WIP.mame.sndintrf.*;
-import static WIP.mame.ui_text.ui_getstring;
-import static WIP.mame.ui_textH.*;
+import static mame.ui_text.ui_getstring;
+import static mame.ui_textH.*;
 import static old.mame.usrintrfH.*;
 import static WIP.mame.version.build_version;
 import static mame.cheat.DoCheat;
