@@ -23,6 +23,7 @@
 -Sound, tape and disk emulation for all ZX Spectrum models not implemented
 -Added speaker sound emulation (not tested)
 -Moved eventlst and border to mess package
+-Ported ui_text, ui_textH to mess specific (0.37b7)
 
 22/07/2018
 ==========
